--- a/index.html
+++ b/index.html
@@ -17,3 +17,18 @@
 
     <script src="/main.js" charset="utf-8"></script>
   </head>
+  <body>
+    <header class="container mt-4">
+        <h1 class="display-4 text-center">
+          <i class="fas fa-book-open text-primary"></i>
+          Over<span class="text-primary">Booked</span>Club
+        </h1>
+        </header>
+        <main>
+    
+    
+        </main>
+  </body>
+
+
+</html>
