Added HTML Section for Dark/Light MOde

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
   </head>
   <body>
     <header class="container mt-4">
-        <h1 class="display-4 text-center">
-          <i class="fas fa-book-open text-primary"></i>
-          Over<span class="text-primary">Booked</span>Club
-        </h1>
-        </header>
-        <main>
+      <h1 class="display-4 text-center">
+        <i class="fas fa-book-open text-primary"></i>
+        Over<span class="text-primary">Booked</span>Club
+      </h1>
+    </header>
+    <section>
+      <h3 id="DarkModetext">Dark Mode is OFF</h3>
+      <button onclick="darkMode()">Darkmode</button>
+      <button onclick="lightMode()">LightMode</button>
+    </section>
     
-    
-        </main>
+    <main></main>
   </body>
-
-
 </html>
