--- a/index.html
+++ b/index.html
@@ -29,7 +29,43 @@
       <button onclick="darkMode()">Darkmode</button>
       <button onclick="lightMode()">LightMode</button>
     </section>
-    
-    <main></main>
+
+    <main>
+        <div>
+            <h1 class="display-4 text-right">
+              <i class="text-primary"></i>
+              My<span class="text-primary">Reading</span>List
+            </h1>
+            <form id="book-form" class="pull-right book-form">
+              <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" id="title" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label for="author">Author</label>
+                <input type="text" id="author" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label for="isbn">ISBN#</label>
+                <input type="text" id="isbn" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label for="review">Review</label>
+                <input
+                  type="text"
+                  maxlength="150"
+                  id="review"
+                  class="form-control"
+                />
+              </div>
+              <input
+                type="submit"
+                value="Add Book"
+                class="btn btn-primary btn-block"
+              />
+            </form>
+          <div class="articles row" id="articles-holder"></div>
+          </div>
+    </main>
   </body>
 </html>
