--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                 <input type="text" id="isbn" class="form-control" />
               </div>
               <div class="form-group">
+                <label for="image">Image</label>
+                <input type="url" id="img" class="form-control" />
+              </div>
+              <div class="form-group">
                 <label for="review">Review</label>
                 <input
                   type="text"
@@ -64,6 +68,7 @@
                 class="btn btn-primary btn-block"
               />
             </form>
+             
           <div class="articles row" id="articles-holder"></div>
           </div>
     </main>
