Updates on Styling

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <title>Book-ish</title>
     <link href="/style.css" rel="stylesheet" type="text/css" />
-    <link
-      rel="stylesheet"
-      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
       rel="stylesheet"
       href="https://bootswatch.com/4/yeti/bootstrap.min.css"
@@ -70,7 +67,16 @@
             </form>
              
           <div class="articles row" id="articles-holder"></div>
+
           </div>
+          <div class="socialMedia">
+            <ul>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            </ul>
+        </div>
     </main>
   </body>
 </html>
