--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="container mt-4">
       <h1 class="display-4 text-center">
-        <i class="fas fa-book-open text-primary"></i>
+        <i class="fa-solid fa-book-open" text-primary></i>
         Over<span class="text-primary">Booked</span>Club
       </h1>
     </header>
