--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://bootswatch.com/4/yeti/bootstrap.min.css"
     />
-
+    <script src="https://kit.fontawesome.com/fbe5c8d282.js" crossorigin="anonymous"></script>
     <script src="/main.js" charset="utf-8"></script>
   </head>
   <body>
@@ -20,6 +20,29 @@
         <i class="fa-solid fa-book-open" text-primary></i>
         Over<span class="text-primary">Booked</span>Club
       </h1>
+
+      <div class = "navbar">
+        <div class = "logo">
+            <a href="#">Book-ish</a> 
+        </div>
+        <div class="spread">
+            <ul>
+                <l1> <a href="#">Home |</a></l1>
+                <l1> <a href="#about"> About</a></l1>    
+      
+            </ul>
+        </div>
+        <div class="contact-info">
+            <ul>
+                <l1><a href="#" class ="mobile no">
+                  <i class="fa-solid fa-phone"></i>
+                  +254712345678</a></l1>
+                <l1><a href="#" class ="sep"></a></l1>
+                <l1><a href="#" class ="email">
+                  <i class="fa-solid fa-envelope"></i>
+                  overbooked@gmail.com</a></l1>
+            </ul>
+     </div>
     </header>
     <section>
       <h3 id="DarkModetext">Dark Mode is OFF</h3>
@@ -36,19 +59,19 @@
             <form id="book-form" class="pull-right book-form">
               <div class="form-group">
                 <label for="title">Title</label>
-                <input type="text" id="title" class="form-control" />
+                <input type="text" id="title" class="form-control" placeholder="Book Title" />
               </div>
               <div class="form-group">
                 <label for="author">Author</label>
-                <input type="text" id="author" class="form-control" />
+                <input type="text" id="author" class="form-control" placeholder="Enter Author's name" />
               </div>
               <div class="form-group">
                 <label for="isbn">ISBN#</label>
-                <input type="text" id="isbn" class="form-control" />
+                <input type="text" id="isbn" class="form-control" placeholder="Enter ISBN No"/>
               </div>
               <div class="form-group">
                 <label for="image">Image</label>
-                <input type="url" id="img" class="form-control" />
+                <input type="url" id="img" class="form-control" placeholder="image url"/>
               </div>
               <div class="form-group">
                 <label for="review">Review</label>
@@ -57,7 +80,8 @@
                   maxlength="150"
                   id="review"
                   class="form-control"
-                />
+                  placeholder="Write your review"
+               />
               </div>
               <input
                 type="submit"
@@ -71,7 +95,7 @@
           </div>
           <div class="socialMedia">
             <ul>
-            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa-brands fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-linkedin"></a>
             <a href="#" class="fa fa-instagram"></a>
